gitops/apps/memos/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos-deployment
  labels:
    app: memos
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: memos
  template:
    metadata:
      labels:
        app: memos
    spec:
      containers:
        - name: memos
          image: neosmemo/memos:stable
          ports:
            - containerPort: 5230
          volumeMounts:
            - name: memos-data
              mountPath: /var/opt/memos
      volumes:
        - name: memos-data
          persistentVolumeClaim:
            claimName: memos
