gitops/apps/memos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memos
  annotations:
    # projectcontour.io/upstream-protocol.h2c: "5230"
spec:
  selector:
    app: memos
  ports:
    - protocol: TCP
      port: 5230
      targetPort: 5230
---
apiVersion: v1
kind: Service
metadata:
  name: memos-grpc
  annotations:
    projectcontour.io/upstream-protocol.h2c: "5230"
spec:
  selector:
    app: memos
  ports:
    - protocol: TCP
      port: 5230
      targetPort: 5230
