gitops/apps/memos/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memos
  annotations:
    cert-manager.io/cluster-issuer: bealvio
    external-dns.alpha.kubernetes.io/target: bealv.io
  labels:
    probe: enabled
spec:
  ingressClassName: external
  rules:
    - host: 'memos.bealv.io'
      http:
        paths:
          - path: /memos.api.*
            pathType: ImplementationSpecific
            backend:
              service:
                name: memos-grpc
                port:
                  number: 5230
          - path: /
            pathType: Prefix
            backend:
              service:
                name: memos
                port:
                  number: 5230
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: mortis
                port:
                  number: 5231
          - path: /o/r
            pathType: Prefix
            backend:
              service:
                name: mortis
                port:
                  number: 5231
  tls:
    - hosts:
        - 'memos.bealv.io'
      secretName: memos-tls
